Remove non-agreed-upon non-interoperable code from the engine

--- a/config.properties
+++ b/config.properties
@@ -8,10 +8,5 @@ METHOD=A_STAR
 #  Possible debug values
 #    TRUE
 #    FALSE
-DEBUG=TRUE
+DEBUG=FALSE
 #  Just put in the file name
-BOARD=input3.txt
-#  Possible heuristics:
-#    DISTANCE
-#    PLACED_BOXES
-HEURISTIC=DISTANCE
