Changed key names.

--- a/src/rpg/configs.properties
+++ b/src/rpg/configs.properties
@@ -1,12 +1,12 @@
 # Directory with item files
-itemsFolder=testdata
+ITEMS_FOLDER=testdata
 # Name of file with boot items
-boots=botas.tsv
+BOOTS=botas.tsv
 # Name of file with chest piece items
-chestPieces=pecheras.tsv
+CHEST_PIECES=pecheras.tsv
 # Name of file with gloves items
-gloves=guantes.tsv
+GLOVES=guantes.tsv
 # Name of file with helmet items
-helmets=cascos.tsv
+HELMETS=cascos.tsv
 # Name of file with weapon items
-weapons=armas.tsv
+WEAPONS=armas.tsv
