Added stat modifiers to config properties and refactored some methods.

--- a/src/rpg/configs.properties
+++ b/src/rpg/configs.properties
@@ -10,3 +10,14 @@ GLOVES=guantes.tsv
 HELMETS=cascos.tsv
 # Name of file with weapon items
 WEAPONS=armas.tsv
+# Stat modifiers must be a double.
+# Strength stat modifier
+STRENGTH=0.9
+# Agility stat modifier
+AGILITY=1.1
+# Expertise stat modifier
+EXPERTISE=1.1
+# Resistance stat modifier
+RESISTANCE=0.9
+# Vitality stat modifier
+VITALITY=0.7
