--- a/src/rpg/configs.properties
+++ b/src/rpg/configs.properties
@@ -21,3 +21,7 @@ EXPERTISE=1.1
 RESISTANCE=0.9
 # Vitality stat modifier
 VITALITY=0.7
+# Profession performance modifiers
+# WARRIOR(0.6, 0.4), ARCHER(0.9, 0.1), DEFENDER(0.1, 0.9), ASSASSIN(0.7, 0.3);
+ATTACK=0.9
+DEFENSE=0.1
