--- a/src/engine/config.properties
+++ b/src/engine/config.properties
@@ -5,7 +5,7 @@
 #   RANKING
 #   ROULETTE
 #   UNIVERSAL
-FIRST_SELECTOR=DETERMINISTIC_TOURNEY
+FIRST_SELECTOR=ELITE
 SECOND_SELECTOR=PROBABILISTIC_TOURNEY
 # If DETERMINISTIC_TOURNEY is chosen you must also
 #   set the amount of participants per duel.
@@ -18,23 +18,23 @@ MUTATOR=UNIFORM
 # If UNIFORM mutator is chosen you must also
 #   set the probability of mutation.
 #   Must be a double.
-MUTATOR_PROBABILITY=0.75
+MUTATOR_PROBABILITY=1
 # Possible values for crosser:
 #   ANNULAR
 #   SINGLE_POINT
 #   TWO_POINTS
 #   UNIFORM
-CROSSER=ANNULAR
+CROSSER=SINGLE_POINT
 # If UNIFORM_CROSSER crosser is chosen you must also
 #   set the probability of crossover.
 #   Must be a double.
 UNIFORM_CROSSER_PROBABILITY=0.75
 # Generational gap
 #   Must be a double.
-GENERATIONAL_GAP=0.75
+GENERATIONAL_GAP=1
 # Population size
 #   Must be an integer.
-POP_SIZE=100
+POP_SIZE=1
 # % of population that will be selected
 #   with FIRST_SELECTOR
 #   Must be a double in [0,1]
