--- a/src/rpg/config.properties
+++ b/src/rpg/config.properties
@@ -1,5 +1,5 @@
 # Directory with item files
-ITEMS_FOLDER=testdata
+ITEMS_FOLDER=src/testdata
 # Name of file with boot items
 BOOTS=botas.tsv
 # Name of file with chest piece items
