Added breaker to properties file.

--- a/src/engine/config.properties
+++ b/src/engine/config.properties
@@ -25,6 +25,15 @@ MUTATOR_PROBABILITY=1
 #   TWO_POINTS
 #   UNIFORM
 CROSSER=SINGLE_POINT
+# Possible values for breaker:
+#   GENERATION,
+#   OPTIMAL,
+#   STRUCTURE,
+#   CONTENT
+BREAKER=GENERATION
+# If GENERATION breaker is chosen you must also set
+#   the max amount of generations.
+MAX_GENERATIONS=3
 # If UNIFORM_CROSSER crosser is chosen you must also
 #   set the probability of crossover.
 #   Must be a double.
