--- a/src/engine/config.properties
+++ b/src/engine/config.properties
@@ -1,16 +1,17 @@
 # Possible values for selector:
+#   BOLTZMANN
 #   DETERMINISTIC_TOURNEY
 #   PROBABILISTIC_TOURNEY
 #   ELITE
 #   RANKING
 #   ROULETTE
 #   UNIVERSAL
-FIRST_SELECTOR=ELITE
+FIRST_SELECTOR=BOLTZMANN
 SECOND_SELECTOR=PROBABILISTIC_TOURNEY
 # If DETERMINISTIC_TOURNEY is chosen you must also
 #   set the amount of participants per duel.
 #   Must be an integer.
-PARTICIPANTS=2
+PARTICIPANTS=1
 # Possible values for mutator:
 #   UNIFORM,
 #   NON_UNIFORM
@@ -25,6 +26,12 @@ MUTATOR_PROBABILITY=1
 #   TWO_POINTS
 #   UNIFORM
 CROSSER=SINGLE_POINT
+# If UNIFORM_CROSSER crosser is chosen you must also
+#   set the probability of crossover.
+#   Must be a double.
+UNIFORM_CROSSER_PROBABILITY=0.75
+# Generational gap
+#   Must be a double in [0,1]
 # Possible values for breaker:
 #   GENERATION,
 #   OPTIMAL,
@@ -33,22 +40,20 @@ CROSSER=SINGLE_POINT
 BREAKER=GENERATION
 # If GENERATION breaker is chosen you must also set
 #   the max amount of generations.
-MAX_GENERATIONS=3
-# If UNIFORM_CROSSER crosser is chosen you must also
-#   set the probability of crossover.
-#   Must be a double.
-UNIFORM_CROSSER_PROBABILITY=0.75
-# Generational gap
-#   Must be a double.
+MAX_GENERATIONS=10000
+# If OPTIMAL breaker is chosen you must also set
+#   the optimal value threshold (in [0,1])
+THRESHOLD=0.15
+# The generational gap must be in [0,1]
 GENERATIONAL_GAP=1
 # Population size
 #   Must be an integer.
-POP_SIZE=1
+POP_SIZE=100
 # % of population that will be selected
 #   with FIRST_SELECTOR
 #   Must be a double in [0,1]
 FIRST_SELECTOR_PCT=0.75
 # % of population that will be selected
-#   with FIRST_REPLACEr
+#   with FIRST_REPLACER
 #   Must be a double in [0,1]
 FIRST_REPLACER_PCT=0.75
