Refactor replacer (add fitness function)

--- a/src/engine/config.properties
+++ b/src/engine/config.properties
@@ -6,7 +6,7 @@
 #   RANKING
 #   ROULETTE
 #   UNIVERSAL
-FIRST_SELECTOR=BOLTZMANN
+FIRST_SELECTOR=ELITE
 SECOND_SELECTOR=PROBABILISTIC_TOURNEY
 # If DETERMINISTIC_TOURNEY is chosen you must also
 #   set the amount of participants per duel.
