Content breaker added

--- a/src/engine/config.properties
+++ b/src/engine/config.properties
@@ -37,13 +37,19 @@ UNIFORM_CROSSER_PROBABILITY=0.75
 #   OPTIMAL,
 #   STRUCTURE,
 #   CONTENT
-BREAKER=GENERATION
+BREAKER=CONTENT
 # If GENERATION breaker is chosen you must also set
 #   the max amount of generations.
 MAX_GENERATIONS=10000
 # If OPTIMAL breaker is chosen you must also set
 #   the optimal value threshold (in [0,1])
 THRESHOLD=0.15
+# If CONTENT breaker is chosen you must also set
+# the number of generations that can be used to get better
+WINDOW=10000
+# the proportion of the optimal value that is considered an improvement
+# values in [0,1]
+TOLERANCE=0.01 
 # The generational gap must be in [0,1]
 GENERATIONAL_GAP=0.5
 # Population size
