Mix replacer added

--- a/src/engine/config.properties
+++ b/src/engine/config.properties
@@ -1,4 +1,4 @@
-# Possible values for selector:
+# Possible values for selector and replacer:
 #   BOLTZMANN
 #   DETERMINISTIC_TOURNEY
 #   PROBABILISTIC_TOURNEY
@@ -8,6 +8,10 @@
 #   UNIVERSAL
 FIRST_SELECTOR=ELITE
 SECOND_SELECTOR=PROBABILISTIC_TOURNEY
+FIRST_REPLACER_SELECTOR=ELITE
+SECOND_REPLACER_SELECTOR=PROBABILISTIC_TOURNEY
+# Percentage of first replacer selector used (in [0,1])
+REPLACER_PROPORTION=0.5
 # If DETERMINISTIC_TOURNEY is chosen you must also
 #   set the amount of participants per duel.
 #   Must be an integer.
@@ -40,7 +44,7 @@ UNIFORM_CROSSER_PROBABILITY=0.75
 BREAKER=CONTENT
 # If GENERATION breaker is chosen you must also set
 #   the max amount of generations.
-MAX_GENERATIONS=10000
+MAX_GENERATIONS=1000
 # If OPTIMAL breaker is chosen you must also set
 #   the optimal value threshold (in [0,1])
 THRESHOLD=0.15
