Add support for diferent probabilities on deterministic tourney for selection and replacing

--- a/src/engine/config.properties
+++ b/src/engine/config.properties
@@ -7,15 +7,27 @@
 #   ROULETTE
 #   UNIVERSAL
 FIRST_SELECTOR=ELITE
-SECOND_SELECTOR=PROBABILISTIC_TOURNEY
+SECOND_SELECTOR=DETERMINISTIC_TOURNEY
 FIRST_REPLACER_SELECTOR=ELITE
-SECOND_REPLACER_SELECTOR=PROBABILISTIC_TOURNEY
-# Percentage of first replacer selector used (in [0,1])
-REPLACER_PROPORTION=0.5
-# If DETERMINISTIC_TOURNEY is chosen you must also
+SECOND_REPLACER_SELECTOR=DETERMINISTIC_TOURNEY
+# % of population that will be selected
+#   with FIRST_SELECTOR
+#   Must be a double in [0,1]
+#   Es lo que la consigna llama A
+FIRST_SELECTOR_PCT=0.75
+#   proportion of population that will be replaced
+#   with FIRST_REPLACER
+#   Must be a double in [0,1]
+#   Es lo que la consigna llama B
+FIRST_REPLACER_PROPORTION=0.5
+# If DETERMINISTIC_TOURNEY is chosen for selector you must also
 #   set the amount of participants per duel.
 #   Must be an integer.
-PARTICIPANTS=1
+SELECTOR_PARTICIPANTS=1
+# If DETERMINISTIC_TOURNEY is chosen for replacer you must also
+#   set the amount of participants per duel.
+#   Must be an integer.
+REPLACER_PARTICIPANTS=1
 # Possible values for mutator:
 #   UNIFORM,
 #   NON_UNIFORM
@@ -36,6 +48,7 @@ CROSSER=SINGLE_POINT
 UNIFORM_CROSSER_PROBABILITY=0.75
 # Generational gap
 #   Must be a double in [0,1]
+GENERATIONAL_GAP=0.5
 # Possible values for breaker:
 #   GENERATION,
 #   OPTIMAL,
@@ -51,19 +64,10 @@ THRESHOLD=0.15
 # If CONTENT breaker is chosen you must also set
 # the number of generations that can be used to get better
 WINDOW=10000
+# If CONTENT breaker is chosen you must also set
 # the proportion of the optimal value that is considered an improvement
 # values in [0,1]
-TOLERANCE=0.01 
-# The generational gap must be in [0,1]
-GENERATIONAL_GAP=0.5
+TOLERANCE=0.01
 # Population size
 #   Must be an integer.
 POP_SIZE=100
-# % of population that will be selected
-#   with FIRST_SELECTOR
-#   Must be a double in [0,1]
-FIRST_SELECTOR_PCT=0.75
-# % of population that will be selected
-#   with FIRST_REPLACER
-#   Must be a double in [0,1]
-FIRST_REPLACER_PCT=0.75
