Add debugging and fix multiple issues

--- a/src/engine/config.properties
+++ b/src/engine/config.properties
@@ -57,7 +57,7 @@ GENERATIONAL_GAP=0.5
 BREAKER=CONTENT
 # If GENERATION breaker is chosen you must also set
 #   the max amount of generations.
-MAX_GENERATIONS=1000
+MAX_GENERATIONS=CONTENT
 # If OPTIMAL breaker is chosen you must also set
 #   the optimal value threshold (in [0,1])
 THRESHOLD=0.15
@@ -71,3 +71,5 @@ TOLERANCE=0.01
 # Population size
 #   Must be an integer.
 POP_SIZE=100
+#   If debugging is set, the program becomes verbose
+DEBUG=FALSE
