Fix optimal fitness reloading

--- a/src/engine/config.properties
+++ b/src/engine/config.properties
@@ -8,8 +8,8 @@
 #   UNIVERSAL
 FIRST_SELECTOR=ELITE
 SECOND_SELECTOR=DETERMINISTIC_TOURNEY
-FIRST_REPLACER_SELECTOR=ELITE
-SECOND_REPLACER_SELECTOR=DETERMINISTIC_TOURNEY
+FIRST_REPLACER_SELECTOR=BOLTZMANN
+SECOND_REPLACER_SELECTOR=PROBABILISTIC_TOURNEY
 # % of population that will be selected
 #   with FIRST_SELECTOR
 #   Must be a double in [0,1]
@@ -54,10 +54,10 @@ GENERATIONAL_GAP=0.5
 #   OPTIMAL,
 #   STRUCTURE,
 #   CONTENT
-BREAKER=CONTENT
+BREAKER=GENERATION
 # If GENERATION breaker is chosen you must also set
 #   the max amount of generations.
-MAX_GENERATIONS=CONTENT
+MAX_GENERATIONS=100000
 # If OPTIMAL breaker is chosen you must also set
 #   the optimal value threshold (in [0,1])
 THRESHOLD=0.15
