--- a/src/engine/config.properties
+++ b/src/engine/config.properties
@@ -31,11 +31,11 @@ REPLACER_PARTICIPANTS=1
 # Possible values for mutator:
 #   UNIFORM,
 #   NON_UNIFORM
-MUTATOR=UNIFORM
+MUTATOR=NON_UNIFORM
 # If UNIFORM mutator is chosen you must also
 #   set the probability of mutation.
 #   Must be a double.
-MUTATOR_PROBABILITY=1
+MUTATOR_PROBABILITY=0.01
 # Possible values for crosser:
 #   ANNULAR
 #   SINGLE_POINT
@@ -54,10 +54,10 @@ GENERATIONAL_GAP=0.5
 #   OPTIMAL,
 #   STRUCTURE,
 #   CONTENT
-BREAKER=GENERATION
+BREAKER=STRUCTURE
 # If GENERATION breaker is chosen you must also set
 #   the max amount of generations.
-MAX_GENERATIONS=100000
+MAX_GENERATIONS=10000
 # If OPTIMAL breaker is chosen you must also set
 #   the optimal value threshold (in [0,1])
 THRESHOLD=0.15
@@ -68,6 +68,10 @@ WINDOW=10000
 # the proportion of the optimal value that is considered an improvement
 # values in [0,1]
 TOLERANCE=0.01
+# If STRUCTURE breaker is chosen you must also set
+# the proportion of the population that should not have changed
+# for the algorithm to stop
+UNCHANGED_PROPORTION=0.99
 # Population size
 #   Must be an integer.
 POP_SIZE=100
