--- a/src/engine/config.properties
+++ b/src/engine/config.properties
@@ -8,18 +8,18 @@
 #   UNIVERSAL
 FIRST_SELECTOR=ELITE
 SECOND_SELECTOR=DETERMINISTIC_TOURNEY
-FIRST_REPLACER_SELECTOR=BOLTZMANN
+FIRST_REPLACER_SELECTOR=ELITE
 SECOND_REPLACER_SELECTOR=PROBABILISTIC_TOURNEY
 # % of population that will be selected
 #   with FIRST_SELECTOR
 #   Must be a double in [0,1]
 #   Es lo que la consigna llama A
-FIRST_SELECTOR_PCT=0.75
+FIRST_SELECTOR_PCT=1
 #   proportion of population that will be replaced
 #   with FIRST_REPLACER
 #   Must be a double in [0,1]
 #   Es lo que la consigna llama B
-FIRST_REPLACER_PROPORTION=0.5
+FIRST_REPLACER_PROPORTION=1
 # If DETERMINISTIC_TOURNEY is chosen for selector you must also
 #   set the amount of participants per duel.
 #   Must be an integer.
@@ -31,30 +31,30 @@ REPLACER_PARTICIPANTS=1
 # Possible values for mutator:
 #   UNIFORM,
 #   NON_UNIFORM
-MUTATOR=NON_UNIFORM
+MUTATOR=UNIFORM
 # If UNIFORM mutator is chosen you must also
 #   set the probability of mutation.
 #   Must be a double.
-MUTATOR_PROBABILITY=0.01
+MUTATOR_PROBABILITY=0.5
 # Possible values for crosser:
 #   ANNULAR
 #   SINGLE_POINT
 #   TWO_POINTS
 #   UNIFORM
-CROSSER=SINGLE_POINT
+CROSSER=UNIFORM
 # If UNIFORM_CROSSER crosser is chosen you must also
 #   set the probability of crossover.
 #   Must be a double.
-UNIFORM_CROSSER_PROBABILITY=0.75
+UNIFORM_CROSSER_PROBABILITY=1
 # Generational gap
 #   Must be a double in [0,1]
-GENERATIONAL_GAP=0.5
+GENERATIONAL_GAP=0.9
 # Possible values for breaker:
 #   GENERATION,
 #   OPTIMAL,
 #   STRUCTURE,
 #   CONTENT
-BREAKER=STRUCTURE
+BREAKER=CONTENT
 # If GENERATION breaker is chosen you must also set
 #   the max amount of generations.
 MAX_GENERATIONS=10000
@@ -63,11 +63,11 @@ MAX_GENERATIONS=10000
 THRESHOLD=0.15
 # If CONTENT breaker is chosen you must also set
 # the number of generations that can be used to get better
-WINDOW=10000
+WINDOW=200
 # If CONTENT breaker is chosen you must also set
 # the proportion of the optimal value that is considered an improvement
 # values in [0,1]
-TOLERANCE=0.01
+TOLERANCE=0.05
 # If STRUCTURE breaker is chosen you must also set
 # the proportion of the population that should not have changed
 # for the algorithm to stop
