Set up parameters for second hypothesis

--- a/src/engine/config.properties
+++ b/src/engine/config.properties
@@ -6,9 +6,9 @@
 #   RANKING
 #   ROULETTE
 #   UNIVERSAL
-FIRST_SELECTOR=ELITE
+FIRST_SELECTOR=RANKING
 SECOND_SELECTOR=DETERMINISTIC_TOURNEY
-FIRST_REPLACER_SELECTOR=ELITE
+FIRST_REPLACER_SELECTOR=RANKING
 SECOND_REPLACER_SELECTOR=PROBABILISTIC_TOURNEY
 # % of population that will be selected
 #   with FIRST_SELECTOR
@@ -35,7 +35,7 @@ MUTATOR=UNIFORM
 # If UNIFORM mutator is chosen you must also
 #   set the probability of mutation.
 #   Must be a double.
-MUTATOR_PROBABILITY=0.5
+MUTATOR_PROBABILITY=0.0
 # Possible values for crosser:
 #   ANNULAR
 #   SINGLE_POINT
@@ -48,7 +48,7 @@ CROSSER=UNIFORM
 UNIFORM_CROSSER_PROBABILITY=1
 # Generational gap
 #   Must be a double in [0,1]
-GENERATIONAL_GAP=0.9
+GENERATIONAL_GAP=0.5
 # Possible values for breaker:
 #   GENERATION,
 #   OPTIMAL,
