Set up parameters for various tests

--- a/src/engine/config.properties
+++ b/src/engine/config.properties
@@ -6,9 +6,9 @@
 #   RANKING
 #   ROULETTE
 #   UNIVERSAL
-FIRST_SELECTOR=RANKING
+FIRST_SELECTOR=ELITE
 SECOND_SELECTOR=DETERMINISTIC_TOURNEY
-FIRST_REPLACER_SELECTOR=RANKING
+FIRST_REPLACER_SELECTOR=ELITE
 SECOND_REPLACER_SELECTOR=PROBABILISTIC_TOURNEY
 # % of population that will be selected
 #   with FIRST_SELECTOR
@@ -23,11 +23,11 @@ FIRST_REPLACER_PROPORTION=1
 # If DETERMINISTIC_TOURNEY is chosen for selector you must also
 #   set the amount of participants per duel.
 #   Must be an integer.
-SELECTOR_PARTICIPANTS=1
+SELECTOR_PARTICIPANTS=10
 # If DETERMINISTIC_TOURNEY is chosen for replacer you must also
 #   set the amount of participants per duel.
 #   Must be an integer.
-REPLACER_PARTICIPANTS=1
+REPLACER_PARTICIPANTS=10
 # Possible values for mutator:
 #   UNIFORM,
 #   NON_UNIFORM
@@ -35,7 +35,7 @@ MUTATOR=UNIFORM
 # If UNIFORM mutator is chosen you must also
 #   set the probability of mutation.
 #   Must be a double.
-MUTATOR_PROBABILITY=0.0
+MUTATOR_PROBABILITY=1
 # Possible values for crosser:
 #   ANNULAR
 #   SINGLE_POINT
@@ -63,7 +63,7 @@ MAX_GENERATIONS=10000
 THRESHOLD=0.15
 # If CONTENT breaker is chosen you must also set
 # the number of generations that can be used to get better
-WINDOW=200
+WINDOW=1000
 # If CONTENT breaker is chosen you must also set
 # the proportion of the optimal value that is considered an improvement
 # values in [0,1]
