Add multigen mutator

--- a/src/engine/config.properties
+++ b/src/engine/config.properties
@@ -7,9 +7,9 @@
 #   ROULETTE
 #   UNIVERSAL
 FIRST_SELECTOR=ELITE
-SECOND_SELECTOR=DETERMINISTIC_TOURNEY
+SECOND_SELECTOR=ELITE
 FIRST_REPLACER_SELECTOR=ELITE
-SECOND_REPLACER_SELECTOR=PROBABILISTIC_TOURNEY
+SECOND_REPLACER_SELECTOR=ELITE
 # % of population that will be selected
 #   with FIRST_SELECTOR
 #   Must be a double in [0,1]
@@ -31,11 +31,20 @@ REPLACER_PARTICIPANTS=10
 # Possible values for mutator:
 #   UNIFORM,
 #   NON_UNIFORM
+#   MULTIGEN
 MUTATOR=UNIFORM
 # If UNIFORM mutator is chosen you must also
 #   set the probability of mutation.
 #   Must be a double.
 MUTATOR_PROBABILITY=1
+# If MULTIGEN mutator is chosen you must also
+#   set the probability that a given individual
+#   will mutate
+MUTATOR_INDIVIDUAL_PROBABILITY=1
+# If MULTIGEN mutator is chosen you must also
+#   set the probability that a given gen
+#   will mutate
+MUTATOR_GEN_PROBABILITY=0.25
 # Possible values for crosser:
 #   ANNULAR
 #   SINGLE_POINT
@@ -45,10 +54,10 @@ CROSSER=UNIFORM
 # If UNIFORM_CROSSER crosser is chosen you must also
 #   set the probability of crossover.
 #   Must be a double.
-UNIFORM_CROSSER_PROBABILITY=1
+UNIFORM_CROSSER_PROBABILITY=0.5
 # Generational gap
 #   Must be a double in [0,1]
-GENERATIONAL_GAP=0.5
+GENERATIONAL_GAP=0.9
 # Possible values for breaker:
 #   GENERATION,
 #   OPTIMAL,
@@ -57,13 +66,13 @@ GENERATIONAL_GAP=0.5
 BREAKER=CONTENT
 # If GENERATION breaker is chosen you must also set
 #   the max amount of generations.
-MAX_GENERATIONS=10000
+MAX_GENERATIONS=1000
 # If OPTIMAL breaker is chosen you must also set
 #   the optimal value threshold (in [0,1])
 THRESHOLD=0.15
 # If CONTENT breaker is chosen you must also set
 # the number of generations that can be used to get better
-WINDOW=1000
+WINDOW=200
 # If CONTENT breaker is chosen you must also set
 # the proportion of the optimal value that is considered an improvement
 # values in [0,1]
