--- a/src/engine/config.properties
+++ b/src/engine/config.properties
@@ -7,19 +7,19 @@
 #   ROULETTE
 #   UNIVERSAL
 FIRST_SELECTOR=ELITE
-SECOND_SELECTOR=ELITE
+SECOND_SELECTOR=PROBABILISTIC_TOURNEY
 FIRST_REPLACER_SELECTOR=ELITE
-SECOND_REPLACER_SELECTOR=ELITE
+SECOND_REPLACER_SELECTOR=PROBABILISTIC_TOURNEY
 # % of population that will be selected
 #   with FIRST_SELECTOR
 #   Must be a double in [0,1]
 #   Es lo que la consigna llama A
-FIRST_SELECTOR_PCT=1
+FIRST_SELECTOR_PCT=0.5
 #   proportion of population that will be replaced
 #   with FIRST_REPLACER
 #   Must be a double in [0,1]
 #   Es lo que la consigna llama B
-FIRST_REPLACER_PROPORTION=1
+FIRST_REPLACER_PROPORTION=0.5
 # If DETERMINISTIC_TOURNEY is chosen for selector you must also
 #   set the amount of participants per duel.
 #   Must be an integer.
@@ -32,7 +32,7 @@ REPLACER_PARTICIPANTS=10
 #   UNIFORM,
 #   NON_UNIFORM
 #   MULTIGEN
-MUTATOR=UNIFORM
+MUTATOR=MULTIGEN
 # If UNIFORM mutator is chosen you must also
 #   set the probability of mutation.
 #   Must be a double.
@@ -63,10 +63,10 @@ GENERATIONAL_GAP=0.9
 #   OPTIMAL,
 #   STRUCTURE,
 #   CONTENT
-BREAKER=CONTENT
+BREAKER=GENERATION
 # If GENERATION breaker is chosen you must also set
 #   the max amount of generations.
-MAX_GENERATIONS=1000
+MAX_GENERATIONS=100000
 # If OPTIMAL breaker is chosen you must also set
 #   the optimal value threshold (in [0,1])
 THRESHOLD=0.15
@@ -84,5 +84,5 @@ UNCHANGED_PROPORTION=0.99
 # Population size
 #   Must be an integer.
 POP_SIZE=100
-#   If debugging is set, the program becomes verbose
-DEBUG=FALSE
+#   If debugging is set, the program becomes verbose and plots fitness
+DEBUG=TRUE
